--- a/app/templates/patient.html
+++ b/app/templates/patient.html
@@ -290,7 +290,7 @@
                         </div>
                     </div>
 
-                    <input type="hidden" name="trigger_points" id="triggerPointsData">
+                    <input type="hidden" name="trigger_points_data" id="triggerPointsData">
                     
                     <div class="mt-4">
                         <button type="submit" class="btn btn-primary">Save Treatment</button>
@@ -627,6 +627,9 @@
                 }
             });
         });
+        
+        // Initialize hidden field
+        updateFormData();
     });
     </script>
 {% endblock %}
